--- a/src/components/Movie/Movie.scss
+++ b/src/components/Movie/Movie.scss
@@ -11,5 +11,6 @@
     position: absolute;
     border-radius: 10px;
     box-shadow: 0px 0px 26px -1px rgba(0, 0, 0, 0.75);
+    background-color: #ccc;
   }
 }
