--- a/src/components/Movie/Movie.scss
+++ b/src/components/Movie/Movie.scss
@@ -2,12 +2,12 @@
   margin-bottom: 10px;
   position: relative;
   margin: 10px 10px 30px 10px;
-  min-height: 450px;
 
   &__img {
     width: 100%;
     height: 100%;
     max-width: 290px;
+    height: 438px;
     border-radius: 10px;
     box-shadow: 0px 0px 26px -1px rgba(0, 0, 0, 0.75);
     background-color: #ccc;
@@ -16,10 +16,16 @@
 
 @media screen and (max-width: 768px) {
   .Movie {
-    min-height: 400px;
-
     &__img {
-      max-width: 320px;
+      max-width: 224px;
+      height: 336px;
     }
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .Movie__img {
+    max-width: 130px;
+    height: 195px;
   }
 }
