--- a/src/containers/Movies/Movies.scss
+++ b/src/containers/Movies/Movies.scss
@@ -13,3 +13,10 @@
     align-items: flex-start;
   }
 }
+
+@media screen and (max-width: 768px) {
+  .Movies {
+    padding-right: 10px;
+    padding-left: 10px;
+  }
+}
